--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,16 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     ports:
-      - "3001:3001"          # host 3001 → container 3001
+      - "3001:3001"
     environment:
       - NODE_ENV=production
-      - DB_USER=myuser       # Database username
-      - DB_PASSWORD=mypassword # Database password
-      - DB_HOST=172.17.0.1 # Use host.docker.internal to connect to local DB
-      - DB_PORT=5432         # Database port
-      - DB_NAME=mydb         # Database name
+      - DB_USER=myuser
+      - DB_PASSWORD=mypassword
+      - DB_HOST=172.17.0.1
+      - DB_PORT=5432
+      - DB_NAME=mydb
     volumes:
       - ./backend:/usr/src/app
-    depends_on: []
     networks: [app-net]
 
   frontend:
@@ -24,14 +23,25 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"          # host 3000 → container 3000 (React dev)
+      - "3000:3000"
     environment:
-      - REACT_APP_API_URL=http://localhost:3001 
+      - REACT_APP_API_URL=/api
     volumes:
       - ./frontend:/usr/src/app
     stdin_open: true
     tty: true
     depends_on: [backend]
+    networks: [app-net]
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - frontend
+      - backend
     networks: [app-net]
 
 networks:
