--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,20 +1,16 @@
-# Use an official Node.js runtime as the base image
-FROM node:18-alpine
+# Step 1: Build the React app
+FROM node:16 AS build
 
-# Set the working directory in the container
 WORKDIR /app
-
-# Copy package.json and package-lock.json to the working directory
-COPY package*.json ./
-
-# Install dependencies
-RUN npm install
-
-# Copy the rest of the application code to the working directory
 COPY . .
 
-# Expose the port the app runs on
-EXPOSE 3000
+RUN npm install
+RUN npm run build
 
-# Start the application
-CMD ["npm", "start"]
+# Step 2: Serve the React app with NGINX
+FROM nginx:alpine
+
+COPY --from=build /app/build /usr/share/nginx/html
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
