--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 
 services:
-  backend:
+  express-backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -11,38 +11,27 @@ services:
       - NODE_ENV=production
       - DB_USER=myuser
       - DB_PASSWORD=mypassword
-      - DB_HOST=172.17.0.1
+      # - DB_HOST=host.docker.internal
       - DB_PORT=5432
       - DB_NAME=mydb
     volumes:
       - ./backend:/usr/src/app
     networks: [app-net]
 
-  frontend:
+  react-frontend:
     build:
-      context: ./frontend
+      context: ./nginx
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "80:80"
     environment:
       - REACT_APP_API_URL=/api
-    volumes:
-      - ./frontend:/usr/src/app
     stdin_open: true
     tty: true
-    depends_on: [backend]
+    depends_on: [express-backend]
     networks: [app-net]
 
-  nginx:
-    image: nginx:latest
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - frontend
-      - backend
-    networks: [app-net]
+  
 
 networks:
   app-net:
