--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - NODE_ENV=production
       - DB_USER=myuser
       - DB_PASSWORD=mypassword
-      # - DB_HOST=host.docker.internal
+      - DB_HOST=192.168.1.15
       - DB_PORT=5432
       - DB_NAME=mydb
     volumes:
