--- a/KubernetesClusterYamlConfig/express-backenddeployment.yaml
+++ b/KubernetesClusterYamlConfig/express-backenddeployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: express-backend
-          image: sanfara/express-backend:v2
+          image: sanfara/express-backend:${VERSION}
           imagePullPolicy: Always
           ports:
             - containerPort: 3001
