--- a/KubernetesClusterYamlConfig/express-backenddeployment.yaml
+++ b/KubernetesClusterYamlConfig/express-backenddeployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: express-backend
-          image: sanfara/express-backend:${{ github.ref_name }}
+          image: sanfara/express-backend:$TAG_NAME
           imagePullPolicy: Always
           ports:
             - containerPort: 3001
