--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,27 @@ jobs:
           docker build -t sanfara/express-backend:${{ github.ref_name }} ./backend
           docker push sanfara/express-backend:${{ github.ref_name }}
 
+      - name: Replace tag in deployment files
+        env:
+          TAG_NAME: ${{ github.ref_name }}
+        run: |
+          # Replace tag in express backend template
+          envsubst < KubernetesClusterYamlConfig/express-backenddeployment-t.yaml > KubernetesClusterYamlConfig/express-backenddeployment.yaml
+          
+          # Replace tag in Nginx template
+          envsubst < KubernetesClusterYamlConfig/nginx-deployment-t.yaml > KubernetesClusterYamlConfig/nginx-deployment.yaml
+
+      # 7. Commit and push the updated files
+      - name: Commit updated YAML files
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add KubernetesClusterYamlConfig/express-backenddeployment.yaml
+          git add KubernetesClusterYamlConfig/nginx-deployment.yaml
+          git commit -m "Update deployments for tag $TAG_NAME"
+          git push
+      
+
       - name: Run Tests
         run: |
           # Run your tests here, e.g., using Jest or Mocha for Node.js
