--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      # Checkout the master branch instead of just the tag to avoid detached HEAD issues
+      - name: Checkout master branch
         uses: actions/checkout@v2
+        with:
+          ref: master
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -36,14 +39,12 @@ jobs:
         env:
           TAG_NAME: ${{ github.ref_name }}
         run: |
-          # Replace tag in express backend template
           envsubst < KubernetesClusterYamlConfig/express-backenddeployment-t.yaml > KubernetesClusterYamlConfig/express-backenddeployment.yaml
-          
-          # Replace tag in Nginx template
           envsubst < KubernetesClusterYamlConfig/nginx-deployment-t.yaml > KubernetesClusterYamlConfig/nginx-deployment.yaml
 
-      # 7. Commit and push the updated files
       - name: Commit updated YAML files
+        env:
+          TAG_NAME: ${{ github.ref_name }}
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
@@ -51,7 +52,6 @@ jobs:
           git add KubernetesClusterYamlConfig/nginx-deployment.yaml
           git commit -m "Update deployments for tag $TAG_NAME"
           git push origin master
-      
 
       - name: Run Tests
         run: |
