--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
           git add KubernetesClusterYamlConfig/express-backenddeployment.yaml
           git add KubernetesClusterYamlConfig/nginx-deployment.yaml
           git commit -m "Update deployments for tag $TAG_NAME"
-          git push origin master
+          git push origin HEAD:master
 
       - name: Run Tests
         run: |
